# marshall

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  com.github.bad_antics.marshall.yml  marshall.desktop
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: issue-responder.yml  release.yml  welcome-stargazers.yml
assets/: marshall.desktop
docs/: ARCHITECTURE.md  CONTRIBUTING.md
docs/wiki/: Architecture.md  FAQ.md  Getting-Started.md  Home.md  Privacy-Features.md
flatpak/: com.github.bad_antics.marshall.metainfo.xml
releases/v1.0.0/: SHA256SUMS.asc  marshall-1.0.0-linux-x86_64.tar.gz.asc
snap/: snapcraft.yaml
src/: main.rs
src/adblock/: mod.rs
src/assistant/: ai_chat.rs  ai_engine.rs  avatar.rs  conversation.rs  mod.rs  speech.rs
src/bookmarks/: mod.rs
src/config/: defaults.rs  mod.rs
src/database/: mod.rs
src/engine/: mod.rs  navigation.rs  webview.rs
src/exploit/: mod.rs
src/exploit/builders/: mod.rs
src/exploit/database/: mod.rs
src/exploit/database/pocs/: shadow_stack_bypass.txt
src/exploit/payloads/: mod.rs
src/exploit/pocs/: shadow_stack_bypass.txt
src/exploit/rootkits/: mod.rs
src/exploit/shells/: mod.rs
src/history/: mod.rs
src/network/: mod.rs
src/privacy/: cookie_manager.rs  fingerprint_protection.rs  mod.rs  tracker_blocker.rs
src/search/: mod.rs  osint.rs  portscan.rs  qwant.rs  vulnerability.rs  whois.rs
src/security/: anti_fingerprint.rs  isolation.rs  memory.rs  mod.rs  threat_intel.rs  traffic.rs
src/tabs/: manager.rs  mod.rs
src/ui/: dashboard.rs  dialogs.rs  homepage.rs  homepage.rs.bak  mod.rs  search_results.rs  statusbar.rs  tabbar.rs  theme.rs  toolbar.rs  urlbar.rs  window.rs
src/utils/: mod.rs
src/voip/: audio.rs  call_manager.rs  contacts.rs  mod.rs  sip.rs
src/workforce/: employee.rs  mod.rs  payout.rs  project.rs  timecard.rs
wiki/: Building.md  Configuration.md  Features.md  Home.md  Installation.md  Shortcuts.md
