[package]
name = "marshall"
version = "1.0.0"
edition = "2021"
authors = ["bad-antics"]
description = "Marshall - NullSec Privacy Browser | Secure. Private. Untraceable."
license = "MIT"
repository = "https://github.com/bad-antics/marshall"
keywords = ["browser", "privacy", "security", "webkit", "nullsec"]
categories = ["web-programming", "gui"]

[features]
default = []
tor = []
developer = []

[dependencies]
# WebKit GTK bindings - this pulls in gtk, gdk, glib, gio
webkit2gtk = "0.19"
gtk = "0.16"
gdk = "0.16"
gio = "0.16"
glib = "0.16"

# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros"] }

# Networking & Security
reqwest = { version = "0.11", features = ["cookies", "rustls-tls"], default-features = false }
url = "2.5"

# Data & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"

# Crypto & Security
sha2 = "0.10"
base64 = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
regex = "1.10"
once_cell = "1.19"
parking_lot = "0.12"
rand = "0.8"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
