[package]
name = "marshall"
version = "2.1.0"
edition = "2021"
authors = ["bad-antics"]
description = "Marshall - NullSec Command Center | Browser • OSINT • Workforce • VoIP • AI"
license = "MIT"
repository = "https://github.com/bad-antics/marshall"
keywords = ["browser", "privacy", "security", "osint", "gtk4"]
categories = ["web-programming", "gui", "command-line-utilities"]

[features]
default = ["assistant"]
tor = []
developer = []
voip = []
assistant = []

[dependencies]
# GTK4/WebKit GTK bindings
gtk4 = "0.7"
webkit2gtk = "0.19"
gtk = "0.16"
gdk = "0.16"
gio = "0.16"
glib = "0.16"
glib-sys = "0.16"
cairo-rs = "0.16"
pango = "0.16"

# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros", "sync", "time", "net", "io-util", "process"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Networking & Security
reqwest = { version = "0.11", features = ["cookies", "rustls-tls", "json", "stream"], default-features = false }
url = "2.5"
trust-dns-resolver = "0.23"
socket2 = "0.5"

# Database (SQLite for local storage)
rusqlite = { version = "0.30", features = ["bundled", "chrono", "serde_json"] }

# Data & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"

# Crypto & Security
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
base64 = "0.21"
hmac = "0.12"
aes-gcm = "0.10"

# Audio/Voice (TTS/STT/VoIP)
rodio = "0.17"
cpal = "0.15"
hound = "3.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
once_cell = "1.19"
parking_lot = "0.12"
rand = "0.8"
num_cpus = "1.16"
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
crossbeam-channel = "0.5"
dashmap = "5.5"
ipnetwork = "0.20"

# HTML/XML parsing for OSINT
scraper = "0.18"
select = "0.6"
quick-xml = "0.31"
urlencoding = "2.1.3"
dirs = "6.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
