[package]
name = "marshall"
version = "3.1.0"
edition = "2021"
authors = ["bad-antics <bad-antics@nullsec.dev>"]
description = "Marshall - NullSec Command Center | Privacy-focused Browser with OSINT tools, VoIP communications, AI assistant, and workforce management"
license = "MIT"
repository = "https://github.com/bad-antics/marshall"
homepage = "https://github.com/bad-antics/marshall"
documentation = "https://docs.rs/marshall"
readme = "README.md"
keywords = ["browser", "privacy", "security", "osint", "gtk4"]
categories = ["web-programming", "gui", "command-line-utilities"]
exclude = ["target/*", "Cargo.lock", ".github/*", "assets/*"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["assistant"]
tor = []
developer = []
voip = []
assistant = []

[dependencies]
webkit2gtk = "0.19"
gtk = "0.16"
gdk = "0.16"
gio = "0.16"
glib = "0.16"
glib-sys = "0.16"
cairo-rs = "0.16"
pango = "0.16"
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros", "sync", "time", "net", "io-util", "process"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["cookies", "rustls-tls", "json", "stream"], default-features = false }
url = "2.5"
trust-dns-resolver = "0.23"
socket2 = "0.5"
rusqlite = { version = "0.30", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
base64 = "0.21"
hmac = "0.12"
aes-gcm = "0.10"
rodio = "0.17"
cpal = "0.15"
hound = "3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
once_cell = "1.19"
parking_lot = "0.12"
rand = "0.8"
num_cpus = "1.16"
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
crossbeam-channel = "0.5"
dashmap = "5.5"
ipnetwork = "0.20"
scraper = "0.18"
select = "0.6"
quick-xml = "0.31"
urlencoding = "2.1.3"
dirs = "6.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
